fix(style): Passage de white-space de "nowrap" à "normal" pour permettre les titres des Memories sur 2 lignes

--- a/frontend/src/components/features/MemoryCard/MemoryCard.css
+++ b/frontend/src/components/features/MemoryCard/MemoryCard.css
@@ -97,7 +97,7 @@
   margin: 0;
   line-height: 1.3;
 
-  white-space: nowrap;
+  white-space: normal;
   overflow: hidden;
   text-overflow: ellipsis;
 }
@@ -117,7 +117,7 @@
 
 /* TITRE DU SOUVENIR */
 .memory-card__title {
-  color: var(--white);
+  color: white;
   font-size: 15px;
   font-weight: 600;
   margin-bottom: 8px;
